tests/rpm-pkgs/zlib-1.2.11-30.simplified.1.fc35/output-exp@symbiotic/scan-results.err
Error: SYMBIOTIC_WARNING:
zlib-1.2.11/test/example.c:554: error: memory error: out of bound pointer
zlib-1.2.11/test/example.c:554: note: call stack: function main (=2, =0)
zlib-1.2.11/test/example.c:554: note: Additional Info: address: (ReadLSB w64 0 zlibVersion):(ReadLSB w64 0 zlibVersion_off)
zlib-1.2.11/test/example.c:554: note: Additional Info: example: 0:0
zlib-1.2.11/test/example.c:554: note: Additional Info: segment range: [0, 18446744073709551615]
zlib-1.2.11/test/example.c:554: note: Additional Info: offset range: [0, 18446744073709551615]
zlib-1.2.11/test/example.c:554: note: Additional Info: pointing to: none
zlib-1.2.11/test/example.c:554:9: note: Non-deterministic values: zlibVersion: len 8 bytes, [8 times 0x0] (i64: 0)
#  552|       static const char* myVersion = ZLIB_VERSION;
#  553|   
#  554|->     if (zlibVersion()[0] != myVersion[0]) {
#  555|           fprintf(stderr, "incompatible zlib version\n");
#  556|           exit(1);
